Minor cleanup to allow for compilation

--- a/viewer2.html
+++ b/viewer2.html
@@ -14,15 +14,6 @@ Hinge model contains 9000 faces. Mesh loading will stop when renderer drops belo
 </pre>
 <div class="web3dviewer" mesh="hinge" noinertia style="position: absolute; top: 120px; width: 600px; height: 500px; "></div>
 
-<script type="text/javascript" src="src/libs/Three.js"></script>
-<script type="text/javascript" src="src/libs/range.js"></script>
-<script type="text/javascript" src="src/libs/Stats.js"></script>
-<script type="text/javascript" src="src/libs/RequestAnimationFrame.js"></script>
-<!--<script type="text/javascript" src="src/libs/slider.js"></script>-->
-<script type="text/javascript" src="src/libs/timer.js"></script>
-<script type="text/javascript" src="src/ooviewController.js"></script>
-<script type="text/javascript" src="src/loadBaseMesh.js"></script>
-<script type="text/javascript" src="src/refineMesh.js"></script>
-<script type="text/javascript" src="src/global.js"></script>
+<script type="text/javascript" src="build/web3dviewer.js"></script>
 	</body>
 </html>
