--- a/viewer4.html
+++ b/viewer4.html
@@ -25,17 +25,7 @@ Size and position of components controlled by CSS properties.
 
 
 
-<script type="text/javascript" src="src/libs/Three.js"></script>
-<script type="text/javascript" src="src/libs/range.js"></script>
-<script type="text/javascript" src="src/libs/Stats.js"></script>
-<script type="text/javascript" src="src/libs/RequestAnimationFrame.js"></script>
-<script type="text/javascript" src="src/libs/slider.js"></script>
-<script type="text/javascript" src="src/libs/timer.js"></script>
-<script type="text/javascript" src="src/ooviewController.js"></script>
-<script type="text/javascript" src="src/loadBaseMesh.js"></script>
-<script type="text/javascript" src="src/refineMesh.js"></script>
-<script type="text/javascript" src="src/global.js"></script>
-
+	<script type="text/javascript" src="build/web3dviewer.js"></script>
 
 	</body>
 </html>
