--- a/viewer6.html
+++ b/viewer6.html
@@ -18,17 +18,7 @@
 <div class="web3dviewer" master="master" view="back" noinertia style="position: absolute; top: 410px; width: 300px; height: 300px; "></div>
 
 
-<script type="text/javascript" src="src/libs/Three.js"></script>
-<script type="text/javascript" src="src/libs/range.js"></script>
-<script type="text/javascript" src="src/libs/Stats.js"></script>
-<script type="text/javascript" src="src/libs/RequestAnimationFrame.js"></script>
-<script type="text/javascript" src="src/libs/slider.js"></script>
-<script type="text/javascript" src="src/libs/timer.js"></script>
-<script type="text/javascript" src="src/ooviewController.js"></script>
-<script type="text/javascript" src="src/loadBaseMesh.js"></script>
-<script type="text/javascript" src="src/refineMesh.js"></script>
-<script type="text/javascript" src="src/global.js"></script>
-
+<script type="text/javascript" src="build/web3dviewer.js"></script>
 
 	</body>
 </html>
