--- a/viewer3.html
+++ b/viewer3.html
@@ -16,15 +16,6 @@
 <div class="web3dviewer" mesh="hinge" style="position: absolute; top: 120px; width: 400px; height: 400px; "></div>
 <div class="web3dviewer" mesh="leg" noprogressive style="position: absolute; top: 120px; left: 450px; width: 400px; height: 400px; "></div>
 
-<script type="text/javascript" src="src/libs/Three.js"></script>
-<script type="text/javascript" src="src/libs/range.js"></script>
-<script type="text/javascript" src="src/libs/Stats.js"></script>
-<script type="text/javascript" src="src/libs/RequestAnimationFrame.js"></script>
-<script type="text/javascript" src="src/libs/slider.js"></script>
-<script type="text/javascript" src="src/libs/timer.js"></script>
-<script type="text/javascript" src="src/ooviewController.js"></script>
-<script type="text/javascript" src="src/loadBaseMesh.js"></script>
-<script type="text/javascript" src="src/refineMesh.js"></script>
-<script type="text/javascript" src="src/global.js"></script>
+<script type="text/javascript" src="build/web3dviewer.js"></script>
 	</body>
 </html>
