--- a/viewer5.html
+++ b/viewer5.html
@@ -20,17 +20,8 @@
 <div class="web3dviewer" id="master0" mesh="arm" noinertia style="position: absolute; top: 100px; width: 400px; height: 500px; "></div>
 <div class="web3dviewer" master="master0" noinertia style="position: absolute; left: 500px; top: 100px; width: 400px; height: 500px; "></div>
 
-<script type="text/javascript" src="src/libs/Three.js"></script>
-<script type="text/javascript" src="src/libs/range.js"></script>
-<script type="text/javascript" src="src/libs/Stats.js"></script>
-<script type="text/javascript" src="src/libs/RequestAnimationFrame.js"></script>
-<script type="text/javascript" src="src/libs/slider.js"></script>
-<script type="text/javascript" src="src/libs/timer.js"></script>
-<script type="text/javascript" src="src/ooviewController.js"></script>
-<script type="text/javascript" src="src/loadBaseMesh.js"></script>
-<script type="text/javascript" src="src/refineMesh.js"></script>
-<script type="text/javascript" src="src/global.js"></script>
 
+<script type="text/javascript" src="build/web3dviewer.js"></script>
 
 	</body>
 </html>
